2005-08-28  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Implem/ReflectionReader.cs
	  Mono.Cecil.Implem/ReflectionWriter.cs:
		Strings constant are unicode.

	* Mono.Cecil/LoadingType.cs
	  Mono.Cecil/AssemblyFactory.cs
	  CodeGen/templates/IndexedCollectionImplem.cs
	  CodeGen/templates/LzIndexedCollectionImplem.cs
	  CodeGen/cecil.xml
	  Mono.Cecil.Implem/InterfaceCollection.cs
	  Mono.Cecil.Implem/ILazyLoadable.cs
	  Mono.Cecil.Implem/ExternTypeCollection.cs
	  Mono.Cecil.Implem/SecurityDeclarationCollection.cs
	  Mono.Cecil.Implem/ReflectionHelper.cs
	  Mono.Cecil.Implem/OverrideCollection.cs
	  Mono.Cecil.Implem/EventDefinitionCollection.cs
	  Mono.Cecil.Implem/FieldDefinitionCollection.cs
	  Mono.Cecil.Implem/PropertyDefinitionCollection.cs
	  Mono.Cecil.Implem/CustomAttributeCollection.cs
	  Mono.Cecil.Implem/MethodDefinition.cs
	  Mono.Cecil.Implem/EventDefinition.cs
	  Mono.Cecil.Implem/FieldDefinition.cs
	  Mono.Cecil.Implem/ModuleDefinition.cs
	  Mono.Cecil.Implem/ReflectionController.cs
	  Mono.Cecil.Implem/TypeReference.cs
	  Mono.Cecil.Implem/ReflectionReader.cs
	  Mono.Cecil.Implem/ReflectionWriter.cs
	  Mono.Cecil.Implem/AssemblyDefinition.cs
	  Mono.Cecil.Implem/TypeDefinition.cs
	  Mono.Cecil.Implem/AggressiveReflectionReader.cs
	  Mono.Cecil.Implem/MethodDefinitionCollection.cs
	  Mono.Cecil.Implem/LazyReflectionReader.cs
	  Mono.Cecil.Implem/ParameterDefinition.cs
	  Mono.Cecil.Implem/PropertyDefinition.cs
	  Mono.Cecil.Implem/ConstructorCollection.cs
	  Mono.Cecil.Signatures/SignatureWriter.cs:
		Get rid of the complexity introduced by the
		internal lazy loading. 

	* Mono.Cecil.Implem/EventDefinition.cs
	  Mono.Cecil.Implem/PropertyDefinition.cs:
		Fix the behavior of .ToString ().

2005-08-27  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Implem/ReflectionWriter.cs:
		Write back custom attributes of modules and assemblies
		as well as their security declaration.
	* Mono.Cecil.Implem/CodeWriter.cs:
		Fix branches computation.