@@ -1,5 +1,10 @@
 2005-08-28  Jb Evain  <jbevain@gmail.com>
 
+	* Mono.Cecil.Implem/CodeWriter.cs:
+		Handle null tokens.
+	  Mono.Cecil.Metadata/MetadataWriter.cs:
+		Allow one empty string in the userstring heap.
+
 	* Mono.Cecil.Implem/ReflectionReader.cs
 	  Mono.Cecil.Implem/ReflectionWriter.cs:
 		Strings constant are unicode.
